<resources>
    <string name="app_name">androidAcademyProject</string>
    <string name="text_back">Back</string>
    <string name="text_age">%1$s+</string>
    <string name="text_age_adult">18</string>
    <string name="text_age_child">13</string>
    <string name="text_title">Avengers: End Game</string>
    <string name="tv_ganre">Action, Adventure, Fantasy</string>
    <string name="text_review">%1$s Reviews</string>
    <string name="text_storyline">Storyline</string>
    <string name="text_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="text_cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="movies_list">Movies list</string>
    <string name="text_length">%1$s MIN</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="open_settings">Данная функция недоступна без доступа к календарю. Открыть настройки приложения?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="acces_to_calendar">Для продолжения дайте доступ к календарю</string>
    <string name="calendar_permission_not_granted">Нет доступа к календарю</string>
    <string name="check_the_date">Check the date</string>
    <string name="check_the_time">Check the time</string>
    <string name="save">Save</string>
    <string name="check_date_time">Заполните дату и время</string>
    <string name="saved">Saved</string>
    <string name="transition_name">name%1$d</string>
    <string name="transition_name_cal">name cal%1$d</string>

</resources>