<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.FragmentCalendar">

    <TextView
        android:id="@+id/tvAddToCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_calendar"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:text="@string/check_the_date"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/etDate"
        app:layout_constraintEnd_toStartOf="@id/etDate"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/standard"
        android:layout_marginEnd="@dimen/small"
        android:focusable="false"
        android:inputType="date"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvDate"
        app:layout_constraintTop_toBottomOf="@id/tvAddToCalendar" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:text="@string/check_the_time"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/etTime"
        app:layout_constraintEnd_toStartOf="@id/etTime"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/standard"
        android:layout_marginEnd="@dimen/small"
        android:focusable="false"
        android:inputType="date"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvTime"
        app:layout_constraintTop_toBottomOf="@id/etDate" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard"
        android:backgroundTint="@color/colorGrey"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTime" />

</androidx.constraintlayout.widget.ConstraintLayout>